Adição do MQTT Insert
Adicionado consulta do jogador no banco via MQTT

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,6 +65,18 @@ body {
     width: 0px;
     font-weight: bold;
    }
+   .answer-txt {
+    position: absolute;
+    top: 0%;
+    left: 10%;
+    color: white;
+    font-size: 28px;
+    text-align: center;
+    transition: 0.4s;
+    line-height: 40px;
+    width: 1000px;
+    font-weight: bold;
+   }
 </style>
  </head>
  <body>
@@ -77,5 +89,5 @@ body {
   </form>
   </div>
  </body>
- <div>{{ value }}</div>
+ <div type="text" class="answer-txt">{{ value }}</div>
 </html>
